# mytask

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.cursor/rules/: my-custom-rule.mdc
mytask/: main.py
mytask/common/: base.py  logger.py  redis_cache.py  settings.py  singleton.py  table.py
mytask/middlewares/: auth.py  logging.py
mytask/models/: __init__.py  tao.py
mytask/routers/: routers.py
mytask/routers/v1/: tao.py
mytask/services/: chutes_models.py  chutes_service.py  datura_models.py  datura_service.py  redis_cache.py  tao_service.py
mytask/services/tests/: test_chutes_service.py  test_datura_service.py  test_tao_service.py
mytask/tables/: tao.py
mytask/workers/: __init__.py  celery.py  tasks.py
mytask/workers/tests/: __init__.py  conftest.py  test_tao_router.py  test_tasks.py
scripts/: create_tables.py
