[project]
name = "mytask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bittensor>=9.3.0",
    "celery>=5.5.1",
    "fastapi>=0.110.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
]
